Created a connection to PostgreSQL database for CheckInOut microservice

--- a/hotels/Services/CheckInOut/CheckInOut.API/appsettings.Development.json
+++ b/hotels/Services/CheckInOut/CheckInOut.API/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "DatabaseSettings": {
+    "ConnectionSettings": "Server=localhost;Port=5432;Database=CheckInOutDb;User Id=isidora;Password=271020;"
   }
 }
