--- a/hotels/docker-compose.override.yml
+++ b/hotels/docker-compose.override.yml
@@ -77,6 +77,14 @@ services:
     ports:
       - "8004:8080"
 
+  roommanaging.grpc:
+    container_name: roommanaginggrpc
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_HTTP_PORTS=8080
+    ports:
+      - "8006:8080"
+
   checkinoutapi:
     container_name: checkinoutapi
     environment:
@@ -87,4 +95,6 @@ services:
       - checkinoutdb
     ports:
       - "8005:8080"
+
+
 
