--- a/hotels/launchSettings.json
+++ b/hotels/launchSettings.json
@@ -8,7 +8,8 @@
         "payment.api": "StartDebugging",
         "rating.api": "StartDebugging",
         "reservations.api": "StartDebugging",
-        "roommanaging.api": "StartDebugging"
+        "roommanaging.api": "StartDebugging",
+        "roommanaging.grpc": "StartDebugging"
       }
     }
   }
