--- a/hotels/Services/Reservations/Reservations.API/Reservations.API.csproj
+++ b/hotels/Services/Reservations/Reservations.API/Reservations.API.csproj
@@ -12,9 +12,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" Version="2.49.0" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="MongoDB.Driver" Version="2.24.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="..\..\ManagingRooms\RoomManaging.GRPC\Protos\hotelsrooms.proto" GrpcServices="Client">
+      <Link>Protos\hotelsrooms.proto</Link>
+    </Protobuf>
   </ItemGroup>
 
 </Project>
