--- a/hotels/launchSettings.json
+++ b/hotels/launchSettings.json
@@ -9,7 +9,8 @@
         "rating.api": "StartDebugging",
         "reservations.api": "StartDebugging",
         "roommanaging.api": "StartDebugging",
-        "roommanaging.grpc": "StartDebugging"
+        "roommanaging.grpc": "StartDebugging",
+        "reservations.grpc": "StartDebugging"
       }
     }
   }
