Connection strings in docker and appsettings.Development.json

--- a/hotels/Services/Rating/Rating.API/appsettings.Development.json
+++ b/hotels/Services/Rating/Rating.API/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "RatingConnectionString": "Server=localhost,1437;Database=RatingDb;User Id=sa;Password=rs2_RatingMicroservice;TrustServerCertificate=True;Encrypt=False;"
+  },
+  "EmailSettings": {
+    "Mail": "destin.schroeder4@ethereal.email",
+    "DisplayName": "Hotels",
+    "Password": "m7y9PEZanyQj7nkYCZ",
+    "Host": "smtp.ethereal.email",
+    "Port": 587
   }
 }
