RoomManaging Service Changes
Implemented repository interfaces for redis database operations.
Implemented controller.
Added DI.
Containerized the project.

--- a/hotels/Services/ManagingRooms/RoomManaging.API/RoomManaging.API.csproj
+++ b/hotels/Services/ManagingRooms/RoomManaging.API/RoomManaging.API.csproj
@@ -12,13 +12,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
-    <PackageReference Include="MongoDB.Driver" Version="2.23.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
+    <PackageReference Include="MongoDB.Driver" Version="2.25.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\RoomManaging.Common\RoomManaging.Common.csproj" />
   </ItemGroup>
 
 </Project>
