--- a/hotels/docker-compose.yml
+++ b/hotels/docker-compose.yml
@@ -13,6 +13,9 @@ services:
   pghoteladmin:
     image: dpage/pgadmin4
 
+  mssql_rating:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+
   authenticationauthorization.api:
     image: ${DOCKER_REGISTRY-}authenticationauthorizationapi
     build:
@@ -65,6 +68,7 @@ volumes:
   postgres_data:
   pgadmin_data:
   mongo_data:
+  mssql_data:
 
 
 
