Setting up mssql image to work for both rating api and identityserver api

--- a/hotels/Security/IdentityServer/appsettings.Development.json
+++ b/hotels/Security/IdentityServer/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "IdentityConnectionString": "Server=localhost;Database=IdentityDb;User Id=sa;Password=rs2_HotelsProject;TrustServerCertificate=True;Encrypt=False;"
+    "IdentityConnectionString": "Server=localhost,1438;Database=IdentityDb;User Id=sa;Password=rs2_IdentityMicroservice;TrustServerCertificate=True;Encrypt=False;"
   }
 }
