--- a/hotels/docker-compose.yml
+++ b/hotels/docker-compose.yml
@@ -13,7 +13,10 @@ services:
   pghoteladmin:
     image: dpage/pgadmin4
 
-  mssql:
+  mssql_rating:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+
+  mssql_identity:
     image: mcr.microsoft.com/mssql/server:2022-latest
 
   payment.api:
@@ -68,7 +71,8 @@ volumes:
   postgres_data:
   pgadmin_data:
   mongo_data:
-  mssql_data:
+  mssql_data_rating:
+  mssql_data_identity:
 
 
 
