--- a/hotels/Services/Rating/Rating.Infrastructure/Rating.Infrastructure.csproj
+++ b/hotels/Services/Rating/Rating.Infrastructure/Rating.Infrastructure.csproj
@@ -1,6 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <Compile Remove="Migrations\**" />
+    <EmbeddedResource Remove="Migrations\**" />
+    <None Remove="Migrations\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Rating.Application\Rating.Application.csproj" />
   </ItemGroup>
 
