--- a/hotels/Services/Rating/Rating.API/appsettings.Development.json
+++ b/hotels/Services/Rating/Rating.API/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "RatingConnectionString": "Server=localhost;Database=RatingDb;User Id=sa;Password=rs2_HotelsProject;TrustServerCertificate=True;Encrypt=False;"
+    "RatingConnectionString": "Server=localhost,1439;Database=RatingDb;User Id=sa;Password=Passw0rd;TrustServerCertificate=True;Encrypt=False;"
   },
   "EmailSettings": {
     "Mail": "destin.schroeder4@ethereal.email",
