Added client side for gRPC communication with Reservations microservice.

--- a/hotels/Services/CheckInOut/CheckInOut.API/CheckInOut.API.csproj
+++ b/hotels/Services/CheckInOut/CheckInOut.API/CheckInOut.API.csproj
@@ -9,9 +9,18 @@
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="13.0.1" />
     <PackageReference Include="Dapper" Version="2.1.35" />
+    <PackageReference Include="Grpc" Version="2.46.6" />
+    <PackageReference Include="Grpc.AspNetCore" Version="2.63.0-pre1" />
+    <PackageReference Include="Grpc.Core" Version="2.46.6" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
     <PackageReference Include="Npgsql" Version="8.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Protobuf Include="..\..\Reservations\Reservations.GRPC\Protos\usersreservation.proto" GrpcServices="Client" >
+      <Link>Protos\usersreservation.proto</Link>
+    </Protobuf>
   </ItemGroup>
 
 </Project>
