--- a/hotels/Services/CheckInOut/CheckInOut.API/appsettings.Development.json
+++ b/hotels/Services/CheckInOut/CheckInOut.API/appsettings.Development.json
@@ -7,5 +7,8 @@
   },
   "DatabaseSettings": {
     "ConnectionSettings": "Server=localhost;Port=5432;Database=CheckInOutDb;User Id=isidora;Password=271020;"
-  }
+  },
+  "GrpcSettings": {
+    "UserReservationsUrl" : "http://localhost:5007"
+  } 
 }
