[Security] Added JWT token generation

--- a/hotels/Security/IdentityServer/appsettings.Development.json
+++ b/hotels/Security/IdentityServer/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "ConnectionStrings": {
     "IdentityConnectionString": "Server=localhost;Database=IdentityDb;User Id=sa;Password=rs2_IdentityMicroservice;TrustServerCertificate=True;Encrypt=False;"
+  },
+  "JwtSettings": {
+    "validIssuer": "Hotels Server",
+    "validAudience": "Hotels",
+    "secretKey": "MyVerySecretMessage",
+    "expires": 15
   }
 }
