--- a/hotels/Security/IdentityServer/appsettings.Development.json
+++ b/hotels/Security/IdentityServer/appsettings.Development.json
@@ -13,5 +13,6 @@
     "validAudience": "Hotels",
     "secretKey": "MyVerySecretMessage",
     "expires": 15
-  }
+  },
+  "RefreshTokenExpires" : 30
 }
