--- a/hotels/docker-compose.override.yml
+++ b/hotels/docker-compose.override.yml
@@ -94,16 +94,10 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - "CacheSettings:ConnectionString=roommanagingdb:6379"
       - ASPNETCORE_HTTP_PORTS=8080
+    depends_on:
+      - roommanagingdb
     ports:
       - "8004:8080"
-
-  roommanaging.grpc:
-    container_name: roommanaginggrpc
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development 
-      - ASPNETCORE_HTTP_PORTS=8080
-    ports:
-      - "8006:8080"
 
   checkinoutapi:
     container_name: checkinoutapi
@@ -115,6 +109,17 @@ services:
       - checkinoutdb
     ports:
       - "8005:8080"
+
+  roommanaging.grpc:
+    container_name: roommanaginggrpc
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings:ConnectionString=roommanagingdb:6379"
+      - ASPNETCORE_HTTP_PORTS=8080
+    depends_on:
+      - roommanagingdb
+    ports:
+      - "8006:8080"
 
   reservations.grpc:
     container_name: reservationsgrpc
