Added asynchronous RabbitMQ communication between CheckInOut and Rating microservice.

--- a/hotels/Services/CheckInOut/CheckInOut.API/appsettings.Development.json
+++ b/hotels/Services/CheckInOut/CheckInOut.API/appsettings.Development.json
@@ -10,5 +10,8 @@
   },
   "GrpcSettings": {
     "UserReservationsUrl" : "http://localhost:5007"
-  } 
+  } ,
+  "EventBusSettings": {
+    "HostAddress": "amqp://guest:guest@localhost:5672"
+  }
 }
