--- a/hotels/Services/Rating/Rating.API/appsettings.Development.json
+++ b/hotels/Services/Rating/Rating.API/appsettings.Development.json
@@ -14,5 +14,8 @@
     "Password": "m7y9PEZanyQj7nkYCZ",
     "Host": "smtp.ethereal.email",
     "Port": 587
+  },
+  "EventBusSettings": {
+    "HostAddress":  "amqp://guest:guest@localhost:5672"
   }
 }
