--- a/hotels/Services/CheckInOut/CheckInOut.API/CheckInOut.API.csproj
+++ b/hotels/Services/CheckInOut/CheckInOut.API/CheckInOut.API.csproj
@@ -12,6 +12,9 @@
     <PackageReference Include="Grpc" Version="2.46.6" />
     <PackageReference Include="Grpc.AspNetCore" Version="2.63.0-pre1" />
     <PackageReference Include="Grpc.Core" Version="2.46.6" />
+    <PackageReference Include="MassTransit" Version="8.2.3-develop.1831" />
+    <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.3-develop.1831" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
     <PackageReference Include="Npgsql" Version="8.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
@@ -21,6 +24,10 @@
     <Protobuf Include="..\..\Reservations\Reservations.GRPC\Protos\usersreservation.proto" GrpcServices="Client" >
       <Link>Protos\usersreservation.proto</Link>
     </Protobuf>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Common\EventBus.Messages\EventBus.Messages.csproj" />
   </ItemGroup>
 
 </Project>
