--- a/hotels/docker-compose.yml
+++ b/hotels/docker-compose.yml
@@ -15,6 +15,9 @@ services:
 
   mssql_identity:
     image: mcr.microsoft.com/mssql/server:2022-latest
+    
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
 
   ratingdb:
     image: mcr.microsoft.com/mssql/server:2022-latest
