Added authorization to Rating and CheckInOut microservices.

--- a/hotels/Services/Rating/Rating.API/appsettings.Development.json
+++ b/hotels/Services/Rating/Rating.API/appsettings.Development.json
@@ -17,5 +17,11 @@
   },
   "EventBusSettings": {
     "HostAddress":  "amqp://guest:guest@localhost:5672"
+  },
+  "JwtSettings": {
+    "validIssuer": "Hotels Server",
+    "validAudience": "Hotels",
+    "secretKey": "MyVerySecretMessage",
+    "expires": 15
   }
 }
