--- a/hotels/Services/CheckInOut/CheckInOut.API/CheckInOut.API.csproj
+++ b/hotels/Services/CheckInOut/CheckInOut.API/CheckInOut.API.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="MassTransit" Version="8.2.3-develop.1831" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.3-develop.1831" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
     <PackageReference Include="Npgsql" Version="8.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.1" />
