--- a/hotels/Services/CheckInOut/CheckInOut.API/appsettings.Development.json
+++ b/hotels/Services/CheckInOut/CheckInOut.API/appsettings.Development.json
@@ -13,5 +13,11 @@
   } ,
   "EventBusSettings": {
     "HostAddress": "amqp://guest:guest@localhost:5672"
+  },
+  "JwtSettings": {
+    "validIssuer": "Hotels Server",
+    "validAudience": "Hotels",
+    "secretKey": "MyVerySecretMessage",
+    "expires": 15
   }
 }
