Replaced container for Identity Server.

--- a/hotels/Security/IdentityServer/appsettings.Development.json
+++ b/hotels/Security/IdentityServer/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "IdentityConnectionString": "Server=localhost;Database=IdentityDb;User Id=sa;Password=rs2_IdentityMicroservice;TrustServerCertificate=True;Encrypt=False;"
+    "IdentityConnectionString": "Server=localhost,1440;Database=IdentityDb;User Id=sa;Password=Passw0rd;TrustServerCertificate=True;Encrypt=False;"
   },
   "JwtSettings": {
     "validIssuer": "Hotels Server",
