[Identity, Frontend] Log in implemented

--- a/hotels/Security/IdentityServer/appsettings.Development.json
+++ b/hotels/Security/IdentityServer/appsettings.Development.json
@@ -11,7 +11,7 @@
   "JwtSettings": {
     "validIssuer": "Hotels Server",
     "validAudience": "Hotels",
-    "secretKey": "MyVerySecretMessage",
+    "secretKey": "MyVeryLongLongSecretMessage256bi",
     "expires": 15
   },
   "RefreshTokenExpires" : 30
