Added hotel name to microservices and event bus

--- a/hotels/Services/CheckInOut/CheckInOut.API/appsettings.Development.json
+++ b/hotels/Services/CheckInOut/CheckInOut.API/appsettings.Development.json
@@ -17,7 +17,7 @@
   "JwtSettings": {
     "validIssuer": "Hotels Server",
     "validAudience": "Hotels",
-    "secretKey": "MyVerySecretMessage",
+    "secretKey": "MyVeryLongLongSecretMessage256bi",
     "expires": 15
   }
 }
