--- a/hotels/Services/Rating/Rating.API/appsettings.Development.json
+++ b/hotels/Services/Rating/Rating.API/appsettings.Development.json
@@ -21,7 +21,7 @@
   "JwtSettings": {
     "validIssuer": "Hotels Server",
     "validAudience": "Hotels",
-    "secretKey": "MyVerySecretMessage",
+    "secretKey": "MyVeryLongLongSecretMessage256bi",
     "expires": 15
   }
 }
