--- a/hotels/WebApps/HotelsSPA/angular.json
+++ b/hotels/WebApps/HotelsSPA/angular.json
@@ -115,7 +115,10 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/@popperjs/core/dist/umd/popper.min.js",
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           }
         }
       }
