--- a/hotels/WebApps/HotelsSPA/angular.json
+++ b/hotels/WebApps/HotelsSPA/angular.json
@@ -113,7 +113,7 @@
               }
             ],
             "styles": [
-              "src/styles.css"
+              "~bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [
               "node_modules/@popperjs/core/dist/umd/popper.min.js",
