[Reservations] Added authentication

--- a/hotels/Services/Reservations/Reservations.API/appsettings.Development.json
+++ b/hotels/Services/Reservations/Reservations.API/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "DatabaseSettings": {
     "ConnectionSettings": "mongodb://localhost:27017"
+  },
+  "JwtSettings": {
+    "validIssuer": "Hotels Server",
+    "validAudience": "Hotels",
+    "secretKey": "MyVeryLongLongSecretMessage256bi",
+    "expires": 15
   }
 }
