--- a/hotels/Services/Reservations/Reservations.API/appsettings.Development.json
+++ b/hotels/Services/Reservations/Reservations.API/appsettings.Development.json
@@ -13,5 +13,8 @@
     "validAudience": "Hotels",
     "secretKey": "MyVeryLongLongSecretMessage256bi",
     "expires": 15
+  },
+  "EventBusSettings": {
+    "HostAddress":  "amqp://guest:guest@localhost:5672"
   }
 }
