--- a/hotels/docker-compose.override.yml
+++ b/hotels/docker-compose.override.yml
@@ -101,8 +101,10 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_HTTP_PORTS=8080
       - "DatabaseSettings:ConnectionSettings=mongodb://reservationsdb:27017" 
+      - "EventBusSettings:HostAddress=amqp://guest:guest@rabbitmq:5672"
     depends_on:
       - reservationsdb
+      - rabbitmq
     ports:
       - "8003:8080"
 
