--- a/hotels/Services/ManagingRooms/RoomManaging.API/appsettings.Development.json
+++ b/hotels/Services/ManagingRooms/RoomManaging.API/appsettings.Development.json
@@ -7,5 +7,11 @@
   },
   "CacheSettings": {
     "ConnectionString": "localhost:6379"
+  },
+  "JwtSettings": {
+    "validIssuer": "Hotels Server",
+    "validAudience": "Hotels",
+    "secretKey": "MyVeryLongLongSecretMessage256bi",
+    "expires": 15
   }
 }
