--- a/hotels/WebApps/HotelsSPA/angular.json
+++ b/hotels/WebApps/HotelsSPA/angular.json
@@ -49,6 +49,7 @@
             ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
+              "src/assets",
               {
                 "glob": "**/*",
                 "input": "public"
